--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ p {
     font-size: 18px;
     color: #555;
     margin-top: 20px;
+    
 }
 
 .car-list {
@@ -45,6 +46,13 @@ p {
     color: #555;
 }
 
+.carData{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
 a {
     display: block;
     text-align: center;
@@ -55,4 +63,36 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+
+
+form {
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+input, select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+button {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #218838;
 }
